# NUCLEO-G474RE-blink-interrupt-for-embedded-rust

./: Cargo.toml  Makefile  README.md  memory.x
.cargo/: config.toml
src/: main.rs
src/utils/: logger.rs  mod.rs
